# tcc-rs

./: AGENTS.md  Cargo.toml  Justfile  README.md  WORKLOG.md  demo.tape
.flox/: env.json
.flox/env/: manifest.toml
tccd-daemon/: Cargo.toml  build.rs
tccd-daemon/examples/: hwcheck.rs
tccd-daemon/src/: io.rs  lib.rs  main.rs  profiles.rs  tuxedo_io.rs
tccd-daemon/src/workers/: fan.rs  mod.rs  power.rs
tccd-tui/: Cargo.toml
tccd-tui/src/: command.rs  dbus_client.rs  main.rs  model.rs  msg.rs  poller.rs  update.rs
tccd-tui/src/views/: charging.rs  dashboard.rs  display.rs  fan_curve.rs  help.rs  info.rs  keyboard.rs  mod.rs  power.rs  profiles.rs  settings.rs  webcam.rs
tccd-tui/src/widgets/: form.rs
