[package]
name = "tccd-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
nix = { version = "0.29", features = ["ioctl"] }
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
zbus = "5.14.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
