[package]
name = "tccd-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3"
tokio = { version = "1.51.0", features = ["full"] }
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
